# Codingame_Elevator

./: CMakeLists.txt  README.md  build.bat  link.txt  main.cpp
include/: elevator.h
src/: elevator.cpp  elevator_test.cpp
